<resources>
    <string name="app_name">DNCC Holding Assessment App</string>
    <string name="app_nameDSCC">DSCC Holding Assessment App</string>
    <string name="access_token">pk.eyJ1IjoidGF1ZmlxdXIiLCJhIjoiY2pwbDN0MjY1MDdnMzN4bnlodjN6dTl3cyJ9.PyaOKSsCoRt0PbtG-B6nug</string>
    <string name="FACEBOOK_APP_ID" translatable="false">284616012036522</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">4cd9ffa3ad8979a04cca9a5694b6eabd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="longitude">Longitude</string>
    <string name="place_coordinates">Place Coordinates</string>
    <string name="lattitude">Lattitude:</string>
    <string name="details_of_address">Details of address...</string>
    <string name="place_address">Place Address</string>
    <string name="go_back">Go back</string>
    <string name="submit">সাবমিট করুন</string>
    <string name="select_place">Select place</string>
    <string name="get_your_own_landmark">Get Your Own landmark!</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="congtats">Congrats!</string>
    <string name="view_own_places">View own places</string>
    <string name="provide_us_with_info_about_your_awesome_place">Fill up your address properly and done!</string>
    <string name="city">City</string>
    <string name="now_what_should_we_call_this_awesome_place">Now,what should we call this awesome place?</string>
    <string name="area_name">Area Name</string>
    <string name="search">Search</string>
    <string name="search_for_a_public_place_with_code">Search for a public place with code</string>
    <string name="code_of_the_place">Code of the Place</string>
    <string name="current_location">Current location</string>
    <string name="would_u_gps">GPS is turned off, turn it on?</string>
    <string name="location_settings">Location Settings</string>
    <string name="share">Share</string>
    <string name="code">Code</string>
    <string name="get_directions">Directions</string>
    <string name="textview">TextView</string>
    <string name="own_places">Own Places</string>
    <string name="sharelinkintro">"Check out my place in Barikoi at "</string>
    <string name="place_details">Place Details</string>
    <string name="place_delete">Delete Place</string>
    <string name="place_update">Update Place</string>
    <string name="select_new_place">Select New Place</string>
    <string name="update_place_details">Update Place Details</string>
    <string name="title_activity_inputplace">Input Place Details</string>
    <string name="change_placename_prompt">Do you Want to Change the Name?</string>
    <string name="title_activity_place_update_details">Upadate Place Details</string>
    <string name="code_for__place">Please tell us what code you want for your place</string>
    <string name="desired_code">Desired Code</string>
    <string name="get_code">Get Code</string>
    <string name="title_activity_getCustomCode">Get Custom Code</string>
    <string name="title_activity_how_to">How To</string>
    <string name="save_place">Save Place</string>
    <string name="favourites">Favourites</string>
    <string name="public_places">Public Places</string>
    <string name="clean_offline">clear cache</string>
    <string name="postal_code">পোস্ট কোড</string>
    <string name="sector">সেক্টর</string>
    <string name="street">Road no./name</string>
    <string name="house">House no./name</string>
    <string name="flat">Flat/floor</string>
    <string name="place_type">Place Type</string>
    <string name="sub_type">Sub-type</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="wrong_input">Wrong Input</string>
    <string name="password_error">More than 4 alphanumeric characters</string>
    <string name="privat">Private</string>
    <string name="publi">Public</string>
    <string name="name_of_the_place">Name of the place/business/house</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="search_nearby_places_by_code">Search nearby places by code</string>
    <string name="nearby">Nearby</string>
    <string name="block">Block no.</string>
    <string name="tap_on_the_screen_to_select_exact_position">Tap on the screen to select exact position</string>
    <string name="marker">marker</string>
    <string name="CustomFontPath">fonts/Roboto/Roboto-Light.ttf</string>
    <string name="logout">Log Out</string>
    <string name="home">Add Home/Work</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="signup">Sign up</string>
    <string name="share_current_location">Share current location via..</string>
    <string name="change_pass">Change Passsword</string>
    <string name="forgot_pasword">Forgot pasword?</string>
    <string name="title_activity_change_pass">Change Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_again">New password (type again)</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Barikoi</string>
    <string name="slide_1_desc">Find addresses easily in Dhaka and never get lost again!</string>
    <string name="slide_2_title">Everything around you</string>
    <string name="slide_2_desc">Find nearby places such as food, utilities, services!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Get offers at instant near you!</string>
    <string name="slide_4_title">Explore!</string>
    <string name="slide_4_desc">Explore your area, find new places!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="processing_request">Processing request....</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="add_a_place">Add Home and Work Address!</string>
    <string name="your_refferal__code_is">Your invite code is</string>
    <string name="share_code_to_get__prize">Share the invite code below,and when people redeem that code, You get points!</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="redeem">Redeem</string>
    <string name="redeem_code_from_friends">Redeem code that you got from friends (You can only do it once)</string>
    <string name="type_refferal_code_here">Type invite code here</string>
    <string name="share_referral_code">Share invite code...</string>
    <string name="invite_code">Invite Code</string>
    <string name="almost_there">Almost there!</string>
    <string name="type_old_and_new_pass">Type in your old password and your new password below</string>
    <string name="four_letter_part">4 Letter Part</string>
    <string name="four_digit_part">4 Letter Part</string>
    <string name="email">Email</string>
    <string name="no_acc_creat_one">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="area_thana">এলাকা/থানা </string>
    <string name="flat_house_road_block_locality">flat, house, road, block, locality</string>
    <string name="type_place_code_or_name">Type place code or name</string>
    <string name="you_have_already_redeemed_a_code">You have already redeemed a code</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_a_member">Already a member?</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="congrats">Congrats!</string>
    <string name="add_your_home_and_office_to_get_the_signup_bonus">Add your home and office</string>
    <string name="or_skip">Or Skip</string>
    <string name="you_have_earned_10_point_for_signing_up">You have earned 10 point for signing up.</string>
    <string name="be_a_neta">Sadly no one added places nearby you or your home. But you can add one landmark so that we can make your life a bit easier</string>
    <string name="nofav">You have not added any favorite places yet</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_of_the_account_to_get_a_mail_containing_your_new_passord">Enter your email of the account to get a mail containing your new passord</string>
    <string name="reset_password">Reset Password</string>
    <string name="points">Points</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="you_got_5_points">You got 5 points!</string>
    <string name="done_with_your_place_entry_the_code_is">Done with your place entry! the code is:</string>
    <string name="add_new_place">Add New Place</string>
    <string name="get_custom_code">Get Custom Code</string>
    <string name="gift_store_coming_soon">Gift Store (coming soon)</string>
    <string name="how_to">How To</string>
    <string name="profile">Profile</string>
    <string name="share_current_place">Share Current Place</string>
    <string name="need_more_zoom">Need to zoom more to get better view at your place!</string>
    <string name="language">English</string>
    <string name="could_not_get_location">Could not get GPS location</string>
    <string name="could_not_con_acc">Could not connect to account</string>
    <string name="prob_change_server">Problem or change in server, please wait and try again</string>
    <string name="press_again_exit">Press again  to exit</string>
    <string name="back_to_main">Proceed to main page</string>
    <string name="you_got">You got</string>
    <string name="redeem_reward">Redeem Reward</string>
    <string name="sure_redeem_reward">Are you sure you want to redeem this reward?</string>
    <string name="done">Done</string>
    <string name="reward_req_done">Reward Request Submitted Successfully,Please give us some time to Confirm it</string>
    <string name="points_available">Points available:</string>
    <string name="ward">ওয়ার্ড </string>
    <string name="zone">জোন </string>
    <string name="subarea">উপ-এলাকা</string>
    <string name="section">সেকশন </string>
    <string name="houseNo">হোল্ডিং নং</string>
    <string name="road">রোড</string>
    <string name="blockname">ব্লক</string>
    <string name="holdingDesc">হোল্ডিং বর্ননা</string>
    <string name="email_bangla">ইমেইল</string>
    <string name="password_bangla">পাসওয়ার্ড</string>
    <string name="log_in_bangla">লগ ইন করুন</string>
    <string name="no_acc_creat_one_bangla">একাউন্ট নেই? একাউন্ট খুলুন</string>
    <string name="forgot_pasword_bangla">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="signup_bangla">নিবন্ধন করুন</string>
</resources>