<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/design_bottom_sheet_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorlistBackground"
    android:elevation="6dp"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:weightSum="1"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TableLayout
                android:id="@+id/tableviewinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/editTextHoldinNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/houseNo"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextFloor"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/editTextRoad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/road"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextBlock"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextBlock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/blockname"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextSector"
                        android:textAlignment="center"
                        android:textSize="18sp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/editTextSector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/sector"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextSection"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/section"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextSubArea"
                        android:textAlignment="center"
                        android:textSize="18sp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/editTextSubArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/subarea"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextArea"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <!--   <EditText
                           android:id="@+id/editTextArea"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="10dp"
                           android:layout_weight="1"
                           android:hint="@string/area_thana"
                           android:imeOptions="actionNext"
                           android:inputType="textCapSentences"
                           android:nextFocusForward="@+id/editTextCity"
                           android:textAlignment="center" />-->
                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextViewArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/area_thana"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/editTextPostal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="4"
                        android:hint="@string/postal_code"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="4"
                        android:nextFocusForward="@+id/editTextPlaceName"
                        android:textAlignment="center"
                        android:textSize="18sp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/editTextWard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/ward"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextPostal"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextZone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="4"
                        android:hint="@string/zone"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="4"
                        android:nextFocusForward="@+id/editTextPlaceName"
                        android:textAlignment="center"
                        android:textSize="18sp" />


                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/editTextHoldingDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/holdingDesc"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@+id/editTextFloor"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSubmitInput"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/submit" />


    </LinearLayout>

</LinearLayout>